2004-08-04  Matti Aarnio  <mea@zmailer.org>

	* configure.in, man/smtpserver.8.in, proto/smtpserver.conf,
	  smtpserver/cfgread.c, smtpserver/policytest.c,
	  smtpserver/policytest.h, 
	    Igor Milyakov sent some new SPF related patches.

	* smtpserver/mxverify.c, smtpserver/policytest.c,
	  smtpserver/smtpserver.c, smtpserver/subdaemon-rtr.c:
	    Ran "gcc -ansi -pedantic"  and got a bunch of warnings.
	    This tries to fix most of those.
	
	* router/libdb/ldap-new.c:
	    Experimental fixes, and updates from Jeff Warnica.
	    He asked this to be stored into some other file,
	    rather than into baseline of ldap.c.

2004-07-14  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Version 2.99.57.pre3

	* smtpserver/smtptls.c:
	    Dist-cache disabled compilation fixed.

	* smtpserver/smtphook.c:
	    A bit work to please the compiler (to silence it, that is)

	* configure.in, smtpserver/smtptls.c:
	    Know  --enable-distcache  -- code modelled after
	    the one in Apache-2.0 mod_ssl module.
	    (Distributed Session Cache)

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/smtpauth.c, smtpserver/smtphook.c,
	  smtpserver/smtp-perl-hooks.pl.in:
	    First write-thru of perl-hooks for smtpserver.

2004-07-11  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c, smtpserver/cfgread.c,
	  smtpserver/policytest.c, smtpserver/smtpauth.c,
	  smtpserver/smtphook.c,   smtpserver/smtpserver.h:
	    More of perl-hook machinery.

	* smtpserver/policytest.c:
	    Reorganized  pt_mailfrom()  logic.

	* smtpserver/smtpserver.c, smtpserver/smtpauth.c,
	  smtpserver/smtpserver.h:
	    Treat whoson result equal to authentication
	    (to some extent.)

2004-07-10  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.h, smtpserver/smtpchild.c,
	  smtpserver/smtpserver.c, smtpserver/subdaemons.c:
	    Child reaper/reap-tracker changes to manage
	    detecting death of subdaemons, and to report it,
	    and even restart them.
