@@ -1,3 +1,14 @@
+2004-08-12  Matti Aarnio  <mea@zmailer.org>
+
+	* smtpserver/subdaemons-ctf.c:
+	    Eugene crosser noted two buglets in subdaemon
+	    communication protocol processing.
+
+	* smtpserver/smtpserver.c, man/smtpserver.8.in,
+	  proto/smtpserver.conf.in:
+	    Added a POSSIBILITY to report contacting IP address
+	    literal in the initial 220 greeting line.
+
 2004-08-04  Matti Aarnio  <mea@zmailer.org>
 
 	* configure.in, man/smtpserver.8.in, proto/smtpserver.conf,
@@ -9,7 +20,7 @@
 	  smtpserver/smtpserver.c, smtpserver/subdaemon-rtr.c:
 	    Ran "gcc -ansi -pedantic"  and got a bunch of warnings.
 	    This tries to fix most of those.
-	
+
 	* router/libdb/ldap-new.c:
 	    Experimental fixes, and updates from Jeff Warnica.
 	    He asked this to be stored into some other file,
